2006-01-25  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpzoompreview.[ch]: added a priv pointer to the
	instance struct and changed the GET_PRIVATE() macro to access the
	private data via that pointer.

2006-01-25  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpintcombobox.[ch]
	* libgimpwidgets/gimppageselector.[ch]
	* libgimpwidgets/gimpzoommodel.[ch]: added a priv pointer to the
	instance struct and changed the GET_PRIVATE() macro to access the
	private data via that pointer.

	* libgimpwidgets/gimpscrolledpreview.[ch]
	* libgimpwidgets/gimpwidgets.def: added a priv pointer to the
	instance struct and moved all private data to the
	GimpScrolledPreviewPrivate struct. Added freeze/thaw methods so
	that derived widgets can be implemented without accessing private
	data.

	* libgimp/gimpzoompreview.c: use gimp_scrolled_preview_[freeze|thaw].

	* libgimp/gimpfontselectbutton.[ch]: let the priv pointer be an
	anonymous void pointer.

2006-01-25  Sven Neumann  <sven@gimp.org>

	* docs/gimp.1.in: document some more environment variables.

	* docs/gimprc.5.in
	* docs/gimptool.1.in: unified spelling of "plug-in".

2006-01-24  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/scripts/guides-new.scm
	* plug-ins/script-fu/scripts/guides-new-percent.scm: allow guides
	at the right and bottom edges of the canvas. Fixes bug #328320.

2006-01-21  Simon Budig  <simon@gimp.org>

	* desktop/gimp.desktop.in.in: Added "GTK" category. Fixes
	bug #328012.

        * tools/pdbgen/pdb/vectors.pdb: removed unused variables.
	* app/pdb/vectors_cmds.c: regenerated.

2006-01-21  Karine Delvare  <kdelvare@nerim.net>

	* app/tools/gimpcroptool.c
	* app/tools/gimpnewrectselecttool.c
	* app/tools/gimprectangleoptions.c
	* app/tools/gimprectangletool.c: indentation fixes.

2006-01-20  Michael Natterer  <mitch@gimp.org>

	* configure.in: applied modified patch from Henrik Brix Andersen
	which adds the possibility to build --without-alsa, even if alsa