@@ -1,3 +1,7 @@
+2006-01-26  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpthumbbox.c: some finetuning to the labels.
+
 2006-01-25  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimpzoompreview.[ch]: added a priv pointer to the
